Remove obsolete JVM option AggressiveOpts