@@ -75,8 +75,7 @@ javaOptions in ThisBuild ++= Seq(
   "-Xnoclassgc",
   "-XX:NewRatio=1",
   "-XX:SurvivorRatio=8",
-  "-XX:+UseParallelGC",
-  "-XX:+AggressiveOpts"
+  "-XX:+UseParallelGC"
 )
 
 addCommandAlias(
